Interval 2 - AstStmtList